// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarNavigation ACT theme matches the snapshot 1`] = `
<div>
  <header
    appbarheight="72"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-66q6c6-MuiPaper-root-MuiAppBar-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ayvi6a-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1q22u1g-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1p6l37g-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-tq2kxj-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1p6l37g-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1el2nyi-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ACT_ET theme matches the snapshot 1`] = `
<div>
  <header
    appbarheight="72"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-4xn2ud-MuiPaper-root-MuiAppBar-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1xgtpuh-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1q22u1g-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-7f0x13-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1anzlxg-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-7f0x13-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-14pv255-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <header
    appbarheight="72"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-4xn2ud-MuiPaper-root-MuiAppBar-root"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-y3fypi-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-1q22u1g-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-tmq4yf-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-m6mbsq-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-1bxaljh-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-tmq4yf-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1s8y3wl-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;
